[tool.poetry]
name = "playground-keras"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "playground_keras"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
